e2e/linodevpc-controller/minimal/03-verify-vpc.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      URI="vpcs" FILTER="{\"label\":\"cli-$(OBJ=linodevpcs/linodevpc-sample make getKubeUid | sed 's/-//g')\"}" make callLinodeApiGet | grep 'results": 0'
