e2e/linodevpc-controller/minimal/01-assert.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeVPC
metadata:
  name: linodevpc-sample
spec:
  label: capli-e2e-byovpc-sample
  region: us-sea
status:
  ready: true
