e2e/linodevpc-controller/minimal/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: minimal
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: 00-assert.yaml
  - name: step-01
    try:
    - apply:
        file: 01-create-vpc.yaml
    - assert:
        file: 01-assert.yaml
  - name: step-02
    try:
    - delete:
        ref:
          apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
          kind: LinodeVPC
          name: linodevpc-sample
    - error:
        file: 02-error.yaml
  - name: step-03
    try:
    - script:
        content: 'URI="vpcs" FILTER="{\"label\":\"CLi-$(OBJ=linodevpcs/linodevpc-sample
          make getKubeUid | sed ''s/-//g'')\"}" make callLinodeApiGet | grep ''results":
          0'''
